--- a/po/anaconda.pot
+++ b/po/anaconda.pot
@@ -6,9 +6,9 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: anaconda 13.21.50\n"
+"Project-Id-Version: anaconda 13.21.51\n"
 "Report-Msgid-Bugs-To: anaconda-devel-list@redhat.com\n"
-"POT-Creation-Date: 2010-06-14 10:39-1000\n"
+"POT-Creation-Date: 2010-06-17 08:27-1000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1978,7 +1978,7 @@ msgid "You have provided a weak password: %s"
 msgstr ""
 
 #: iw/account_gui.py:131
-msgid "Use Anyway"
+msgid "_Use Anyway"
 msgstr ""
 
 #: iw/account_gui.py:139 textw/userauth_text.py:75
