--- a/po/pl.po
+++ b/po/pl.po
@@ -5454,7 +5454,7 @@ msgstr "Tworzenie urządzenia %s"
 #, python-format
 msgid "A RAID%d set requires at least %d member"
 msgid_plural "A RAID%d set requires at least %d members"
-msgstr[0] "Zestaw RAID%d wymaga co najmniej jednego elementu"
+msgstr[0] "Zestaw RAID%d wymaga co najmniej %d elementu"
 msgstr[1] "Zestaw RAID%d wymaga co najmniej %d elementów"
 msgstr[2] "Zestaw RAID%d wymaga co najmniej %d elementów"
 
