Fix broken translation to allow a build.

--- a/po/he.po
+++ b/po/he.po
@@ -1843,7 +1843,7 @@ msgstr "ניסיון התחברות נוסף תוך 15 שניות..."
 #, python-format
 msgid "Giving up attempting to connect after %d try!\n"
 msgid_plural "Giving up attempting to connect after %d tries!\n"
-msgstr[0] "מוותר על ניסיונות התקשרות לאחר הניסיון הראשון\n"
+msgstr[0] "מוותר על ניסיונות התקשרות לאחר %d פעמים!\n"
 msgstr[1] "מוותר על ניסיונות התקשרות לאחר %d ניסיונות!\n"
 
 #
