l10n: Updates to Chinese (China) (zh_CN) translation
Transmitted-via: Transifex (translate.fedoraproject.org)

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: anaconda.master\n"
 "Report-Msgid-Bugs-To: anaconda-devel-list@redhat.com\n"
 "POT-Creation-Date: 2010-09-01 20:52-0500\n"
-"PO-Revision-Date: 2010-09-15 22:17+0800\n"
+"PO-Revision-Date: 2010-09-15 22:27+0800\n"
 "Last-Translator: Tian Shixiong <tiansworld@gmail.com>\n"
 "Language-Team: Wei Liu\n"
 "MIME-Version: 1.0\n"
@@ -6055,7 +6055,7 @@ msgstr "添加 FCP 设备"
 
 #: data/ui/zfcp-config.glade.h:5
 msgid "zSeries machines can access industry-standard SCSI devices via Fibre Channel (FCP). You need to provide a 16 bit device number, a 64 bit World Wide Port Name (WWPN), and a 64 bit FCP LUN for each device."
-msgstr "zSeries 机器可以通过光纤通道 (FCP) 访问业界标准的 SCSI 设备。您需要为每个设备提供：一个16位设备号、一个64位全局端口名（WWPN）、一个16位 SCSI LUN 和一个64位 FCP LUN。"
+msgstr "zSeries 机器可以通过光纤通道 (FCP) 访问业界标准的 SCSI 设备。您需要为每个设备提供：一个16位设备号、一个64位全局端口名（WWPN）和一个64位 FCP LUN。"
 
 #: data/lang-table.h:1
 msgid "Afrikaans"
