Add a warning icon if a spoke is incomplete.
This is not the fancy icon overlay as shown in the mockups, since that takes
a litle more work than I have time to do right now.  Feel free to work on this
yourself.

--- a/widgets/TODO
+++ b/widgets/TODO
@@ -5,14 +5,13 @@ DiskOverview -
    - need to specify big vs. small
 
 SpokeSelector -
-   - need to show incompleteness
+   - make incompleteness notification a little less lame
 
 SpokeWindow -
 
 StandaloneWindow -
 
 New Widgets -
-   - light box dialog
    - PersonalizationWindow
    - physical member display
    - capacity slider+drop down
