Update TODO lists.

--- a/pyanaconda/ui/gui/TODO
+++ b/pyanaconda/ui/gui/TODO
@@ -1,4 +1,1 @@
-- better documentation
-- how does the signal hookup in Hub.__init__ work if there are multiple hubs?
-- signal hookup everywhere is terrible
-- test cases
+- the first DiskOverview doesn't get rounded corners
